# roach-dashboard

./: roach-dashboard.csproj  roach-dashboard.sln
Properties/: launchSettings.json
rpi-control/instruction-router/: CMakeLists.txt  rf_server.cpp
web/: web.csproj
web/Layout/: MainLayout.razor.css
web/Pages/: Home.razor  Home.razor.css
web/Properties/: launchSettings.json
web/wwwroot/: index.html
